0023436: BRepOffsetAPI_ThruSections crashes when lofting through identical profiles Adding of test case